# music-recommendations

./: .cache  .gitignore  80s-playlist.json  README.md  addBasicImagefeatures.py  addMissing.py  addMissingForGinatDATASET.py  addMissingForGinatDATASETFast.py  analysis.py  annoy-test.py  annoy-visualtisation.py  diagrams.py  execute_and_commit.bat  extract-cnn.py  feature_comparison_flow  image_feature_demo.py  main.py  model1.ipynb  model2.ipynb  multistep.md  music_recommendation_flow  nearestNeigbourTest.py  pyproject.toml  recommendation_flow  remove-useless-features.py  renameImages.py  test.py  vector_db_test.py  voyager.py
extract_cnn/: __init__.py  extract_cnn.py
frontend/: .gitignore  README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts
frontend/drizzle/: 0000_fresh_calypso.sql  0001_previous_the_captain.sql
frontend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
frontend/src/: middleware.ts
frontend/src/app/: PostHogPageView.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: FinalSurvey.tsx  Header.tsx  ModelEvaluation.tsx  ModelSelector.tsx  Player.tsx  Playlist.tsx  Recommendations.tsx  Sidebar.tsx  StudyStep.tsx  Survey.tsx  search.tsx  (+36 more)
results/: analysis_report.md
results/tables/: all_ratings.csv  all_song_ratings.csv  genre_findings.csv  genre_performance.csv  hypothesis_results.csv  novelty_by_model.csv  preference_by_age.csv  preference_by_country.csv  relevance_by_model.csv  satisfaction_by_model.csv
tests/: test_extract_cnn.py  test_sample.py
(+97 files in other folders)
