[project]
name = "nb302289-comp302"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annoy>=1.17.3",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pinecone>=6.0.1",
    "pip>=25.0.1",
    "plotly>=6.0.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "setuptools>=75.8.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wheel>=0.45.1",
]
